--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,7 @@ Jinja2==2.10.1
 MarkupSafe==1.1.1
 Werkzeug==0.15.5
 numpy>=1.3.0
-scipy==1.11.1
+scipy>=1.0.0
 scikit-learn==1.3.0
 matplotlib==3.7.2
 pandas==2.0.3
